volexc/tests/ui/recovery_enum_single.vol
// Error in enum variant - recovery continues to next item
enum Status {
    Active 1;
    Pending = 2;
}

struct Point {
    x: u32
}
